# FALSEErgonomic-Path-Planning-via-Human-Robot-Collaboration

./: README.md
CreationAlgorithm/: Main.py
CreationAlgorithm/Algorithm/: A_Star.py  Adjacency_Matrix.py  Candidate_Points.py  Change_Score.py  Computation_Ellips.py  Conversion_To_Tuples.py  Drawing_Graph.py  Fabrik_Robot.py  Graph.py  Optimal_Path.py  Paths_And_Scores.py  Post_Processing.py  Reachable_Points_Robot.py  Results.py  Score_Candidate_Points.py
CreationAlgorithm/Comparison/: A_Star_Comparison.py  Brute_Force_Search.py  Comparison.py  Comparison.xlsx  ComparisonXsensFabrik.py  Comparison_Results_ExpandedNodes.py  Comparison_Results_Runtime.py  Dijkstra.py  Metrics.py
CreationAlgorithm/Fabrik/: Execution_Fabrik.py
CreationAlgorithm/Fabrik/fabrik_full_body/: constraints.py  draw.py  fabrik.py  input_reader.py  output_writer.py  util.py
CreationAlgorithm/Fabrik/fabrik_full_body/angle_calculator/: angle_calculator.py  leg.py  lower_arm.py  neck.py  trunck.py  upper_arm.py  wrist.py
CreationAlgorithm/Fabrik/inputs/: backup_jointsPositions.txt  joints_position_temp.txt  orientation.txt  target.txt  tovTafel.txt  tovZero.txt
CreationAlgorithm/Fabrik/outputs/: angles.txt
CreationAlgorithm/Paths/: path.txt  path1.txt  path10.txt  path2.txt  path3.txt  path4.txt  path5.txt  path6.txt  path7.txt  path8.txt  path9.txt
CreationAlgorithm/PreProcessing/: Read_Data.py  Write_Input.py
CreationAlgorithm/REBA/: Calculation_REBA_Score.py  Degree_Body_Parts.py  draw.py  test.py
CreationAlgorithm/REBA/body_part_reba_calculator/Degree_to_REBA/: __init__.py
CreationAlgorithm/XSens/: Joint_Angles_XSens.xlsx  Main_XSens.py  REBA_Scores_XSens.py  Results_XSens.py  Write_Values_REBA.py
IntegrationROS/catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
IntegrationROS/catkin_ws/devel/include/franka_msgs/: FrankaState.h
IntegrationROS/catkin_ws/devel/include/franka_planner/: JointTorqueComparison.h
IntegrationROS/catkin_ws/devel/include/franka_planner_control/: ComputationalTime.h  DSM.h  DistanceToConstraints.h  HumanStates.h  JointStates.h  JointTorqueComparison.h  MoveItTime.h  RobotEndEffectorPose.h  TrajectoryPredictions.h
IntegrationROS/catkin_ws/devel/include/new_controllers/: JointTorqueComparison.h
IntegrationROS/catkin_ws/devel/include/ros_openpose/: Frame.h  Person.h
IntegrationROS/catkin_ws/devel/include/zed_franka_planner/: JointTorqueComparison.h  desired_mass_paramConfig.h
IntegrationROS/catkin_ws/devel/include/zed_interfaces/: start_object_detectionRequest.h  start_svo_recordingRequest.h
IntegrationROS/catkin_ws/devel/lib/agni_tf_tools/: static_transform_publisher  static_transform_publisher_gui
IntegrationROS/catkin_ws/devel/lib/algorithm_panda_moveit/: all_reachable_points  execution_path  find_reachable_points_robot_workspace  grasp_object  grasp_object_back  move_to_ready  original_grasp_object
IntegrationROS/catkin_ws/devel/lib/camera_integration/: cylinder_segment  parallel_plane_segment
IntegrationROS/catkin_ws/devel/lib/elion_examples/: elion_examples_kuka_example_with_collision  elion_run_example  visualize_ompl_constraints
IntegrationROS/catkin_ws/devel/lib/franka_control/: franka_control_node
IntegrationROS/catkin_ws/devel/lib/franka_gripper/: franka_gripper_node
IntegrationROS/catkin_ws/devel/lib/franka_planner/: moveit_path_plan_execute
IntegrationROS/catkin_ws/devel/lib/franka_planner_control/: erg_visualization_test  moveit_color_detection_move1  moveit_dynamic_move  moveit_octomap_grasp  moveit_octomap_move  moveit_octomap_wrist_move  moveit_static_grasp  moveit_static_move  planner_erg_dynamic_move  planner_erg_static_move  test_send_plan
IntegrationROS/catkin_ws/devel/lib/franka_visualization/: gripper_joint_state_publisher  (+1 more)
IntegrationROS/catkin_ws/install/: .rosinstall
IntegrationROS/catkin_ws/src/algorithm/: CMakeLists.txt
IntegrationROS/catkin_ws/src/algorithm_panda_moveit/: package.xml
IntegrationROS/catkin_ws/src/franka_planner_control/: CMakeLists.txt  package.xml
IntegrationROS/catkin_ws/src/franka_planner_control/config/: franka_planner_control.yaml
IntegrationROS/catkin_ws/src/franka_planner_control/include/: add_rviz_obstacles.h  erg_visualization.h  point_3D.h  skeleton_tracker.h
IntegrationROS/catkin_ws/src/franka_planner_control/include/franka_planner_control/: erg_dynamic_stay_controller.h  erg_static_move_controller.h  explicit_reference_governor.h  impedance_control_path_execute.h  panda_model_controller.h  selector_erg_dynamic_move_controller.h  selector_erg_static_move_controller.h  test_erg.h  test_erg_selector.h
IntegrationROS/catkin_ws/src/franka_planner_control/launch/: erg_static_move_controller.launch  moveit_dynamic_move.launch  robot_dynamicplanningscene.rviz  selector_erg_static_move_controller.launch  test_erg_selector.launch
IntegrationROS/catkin_ws/src/franka_planner_control/msg/: MoveItTime.msg
IntegrationROS/catkin_ws/src/franka_planner_control/rviz/: erg_visualization_test.rviz
IntegrationROS/catkin_ws/src/franka_planner_control/src/: add_rviz_obstacles.cpp  erg_dynamic_stay_controller.cpp  erg_static_move_controller.cpp  erg_visualization.cpp  erg_visualization_test.cpp  explicit_reference_governor.cpp  franka_grasp.cpp  impedance_control_path_execute.cpp  moveit_color_detection_move.cpp  moveit_dynamic_move.cpp  moveit_octomap_grasp.cpp  moveit_octomap_move.cpp  moveit_octomap_wrist_move.cpp  moveit_static_grasp.cpp  moveit_static_move.cpp  panda_model_controller.cpp  planner_erg_dynamic_move.cpp  planner_erg_static_move.cpp  point_3D.cpp  selector_erg_dynamic_move_controller.cpp  selector_erg_static_move_controller.cpp  skeleton_tracker.cpp  test_erg.cpp  test_erg_selector.cpp  test_send_plan.cpp
IntegrationROS/catkin_ws/src/panda_control/: CMakeLists.txt  package.xml
IntegrationROS/catkin_ws/src/panda_description/: CMakeLists.txt
IntegrationROS/catkin_ws/src/panda_gazebo/: CMakeLists.txt  package.xml
IntegrationROS/catkin_ws/src/panda_moveit/: CMakeLists.txt
IntegrationROS/catkin_ws/src/panda_moveit_config/: .setup_assistant
(+491 files in other folders)
